// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AccessControlSystemTab should list handhelds at the end 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-956 makeStyles-filterActionsContainerPadding-958"
    >
      <div
        class="MuiBox-root MuiBox-root-1112 makeStyles-filterStatusContainer-959 makeStyles-autocompleteFilterStatus-976 makeStyles-acsFilterWrapper-1038"
      >
        <div
          class="makeStyles-floatingFilterWrapper-965 makeStyles-filterWrapper-964  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-966"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-974"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All ACS
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-968"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-986 makeStyles-primaryButtonExtraLarge-990 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-acs-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign ACS
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="MuiGrid-root makeStyles-acsListItemWrapper-1109 makeStyles-acsListHeader-1106 MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Name
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Device Type
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Serial Number
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Reader 1
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Reader 2
        </p>
      </div>
    </div>
    <hr
      class="MuiDivider-root makeStyles-acsListHeaderDivide-1107"
    />
    <div
      class="MuiPaper-root MuiAccordion-root WithStyles(ForwardRef(Accordion))-root-1113 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        aria-controls="location-locationId-acs-list"
        aria-disabled="false"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root-1115"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content-1116"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
          >
            Front gate
          </p>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon WithStyles(ForwardRef(AccordionSummary))-expandIcon-1118 MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              id="location-locationId-acs-list"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root WithStyles(ForwardRef(AccordionDetails))-root-1119"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
                  data-testid="acs-item"
                  style="cursor: pointer; height: 100%;"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Test turnstile
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Turnstile
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      NRFFJE3149 - 4991
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiPaper-root MuiAccordion-root WithStyles(ForwardRef(Accordion))-root-1113 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        aria-controls="location-testLoc-acs-list"
        aria-disabled="false"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root-1115"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content-1116"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
          >
            testLoc
          </p>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon WithStyles(ForwardRef(AccordionSummary))-expandIcon-1118 MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              id="location-testLoc-acs-list"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root WithStyles(ForwardRef(AccordionDetails))-root-1119"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
                  data-testid="acs-item"
                  style="cursor: pointer; height: 100%;"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Test turnstile
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Turnstile
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      NRFFJE3149 - 4991
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <hr
      class="MuiDivider-root makeStyles-acsListDivider-1108"
    />
    <div
      class="MuiBox-root MuiBox-root-1120 makeStyles-acsListItemWrapper-1109"
      data-testid="no-location-item-wrapper"
    >
      <div
        class="MuiBox-root MuiBox-root-1121 makeStyles-acsListItem-1110"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
          data-testid="acs-item"
          style="cursor: pointer; height: 100%;"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
          >
            <p
              class="MuiTypography-root MuiTypography-body1"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
          >
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              Handheld
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
          >
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              NSDFJE3129 - 3354
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
          >
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              -
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
          >
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              -
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1145 makeStyles-close-1156 closed"
      data-testid="drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-1146 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-1148"
        >
          <div
            class="makeStyles-drawerButton-1149"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-1147"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-1150 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Device Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-summaryDeviceDetail-1162"
        >
          <div
            class="makeStyles-company-1163"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-1173"
            >
              <div
                class="makeStyles-summaryText-1166"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-1164 makeStyles-entityTitle-1169 MuiTypography-body1"
                >
                  -
                </p>
                <div
                  class="makeStyles-summaryMainText-1167"
                >
                  <span>
                    Open Portal
                  </span>
                  <span>
                    Reverse Installation 
                    No
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1165"
              >
                <div
                  class="makeStyles-summaryRowDirection-1172"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-1166 makeStyles-summaryTextSeparation-1168"
                  >
                    <span />
                    <span>
                      New
                    </span>
                    <span>
                      Last Maintenance Date: 
                      -
                    </span>
                    <span>
                      In Service Date: 
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1165"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-1166 makeStyles-summaryTextSeparation-1168"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1165"
              >
                <div
                  class="makeStyles-summaryText-1166"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-1164 makeStyles-entityTitle-1169 MuiTypography-body1"
                  >
                    Reader 
                    1
                  </p>
                  <div
                    class="makeStyles-summaryMainText-1167"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      Model 
                      -
                    </span>
                    <span>
                      Hostname 
                      -
                    </span>
                    <span>
                      Public IP 
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1165"
              >
                <svg>
                  info.svg
                </svg>
                <div
                  class="makeStyles-summaryText-1166 makeStyles-summaryTextSeparation-1168"
                >
                  <span>
                    SSH Port Connection: 
                    -
                  </span>
                  <span>
                    TELNET Port Connection: 
                    -
                  </span>
                  <span>
                    HTTP Port Connection: 
                    -
                  </span>
                  <span>
                    TCP Port Connection: 
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1165 makeStyles-drawerdevices-1170"
              >
                <div
                  class="makeStyles-deviceWrapper-1171"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-1166 makeStyles-summaryTextSeparation-1168"
                  >
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1165"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-1166 makeStyles-summaryTextSeparation-1168"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-1049"
        />
        <div
          class="makeStyles-ctaWrapper-1138"
          style="padding: 0px;"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-993 makeStyles-borderPrimaryButton-985"
              data-testid="acs-edition-modal-open-btn"
              style="max-width: 100%; width: 125px; padding: 6px 0px;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Edit Assignment
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-993 makeStyles-warningButton-994"
              data-testid="unassign-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Unassign
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccessControlSystemTab should render 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-729 makeStyles-filterActionsContainerPadding-731"
    >
      <div
        class="MuiBox-root MuiBox-root-885 makeStyles-filterStatusContainer-732 makeStyles-autocompleteFilterStatus-749 makeStyles-acsFilterWrapper-811"
      >
        <div
          class="makeStyles-floatingFilterWrapper-738 makeStyles-filterWrapper-737  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-739"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-747"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All ACS
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-741"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-759 makeStyles-primaryButtonExtraLarge-763 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-acs-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign ACS
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="MuiGrid-root makeStyles-acsListItemWrapper-882 makeStyles-acsListHeader-879 MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Name
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Device Type
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Serial Number
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Reader 1
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Reader 2
        </p>
      </div>
    </div>
    <hr
      class="MuiDivider-root makeStyles-acsListHeaderDivide-880"
    />
    <div
      class="MuiPaper-root MuiAccordion-root WithStyles(ForwardRef(Accordion))-root-886 MuiAccordion-rounded MuiPaper-elevation1 MuiPaper-rounded"
    >
      <div
        aria-controls="location-locationId-acs-list"
        aria-disabled="false"
        aria-expanded="false"
        class="MuiButtonBase-root MuiAccordionSummary-root WithStyles(ForwardRef(AccordionSummary))-root-888"
        role="button"
        tabindex="0"
      >
        <div
          class="MuiAccordionSummary-content WithStyles(ForwardRef(AccordionSummary))-content-889"
        >
          <p
            class="MuiTypography-root MuiTypography-body1"
          >
            Front gate
          </p>
        </div>
        <div
          aria-disabled="false"
          aria-hidden="true"
          class="MuiButtonBase-root MuiIconButton-root MuiAccordionSummary-expandIcon WithStyles(ForwardRef(AccordionSummary))-expandIcon-891 MuiIconButton-edgeEnd"
        >
          <span
            class="MuiIconButton-label"
          >
            <svg
              aria-hidden="true"
              class="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M16.59 8.59L12 13.17 7.41 8.59 6 10l6 6 6-6z"
              />
            </svg>
          </span>
          <span
            class="MuiTouchRipple-root"
          />
        </div>
      </div>
      <div
        class="MuiCollapse-container MuiCollapse-hidden"
        style="min-height: 0px;"
      >
        <div
          class="MuiCollapse-wrapper"
        >
          <div
            class="MuiCollapse-wrapperInner"
          >
            <div
              id="location-locationId-acs-list"
              role="region"
            >
              <div
                class="MuiAccordionDetails-root WithStyles(ForwardRef(AccordionDetails))-root-892"
              >
                <div
                  class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
                  data-testid="acs-item"
                  style="cursor: pointer; height: 100%;"
                >
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Test turnstile
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      Turnstile
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      NRFFJE3149 - 4991
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                  <div
                    class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
                  >
                    <p
                      class="MuiTypography-root MuiTypography-body1"
                    >
                      -
                    </p>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-916 makeStyles-close-927 closed"
      data-testid="drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-917 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-919"
        >
          <div
            class="makeStyles-drawerButton-920"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-918"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-921 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Device Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-summaryDeviceDetail-933"
        >
          <div
            class="makeStyles-company-934"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-944"
            >
              <div
                class="makeStyles-summaryText-937"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-935 makeStyles-entityTitle-940 MuiTypography-body1"
                >
                  -
                </p>
                <div
                  class="makeStyles-summaryMainText-938"
                >
                  <span>
                    Open Portal
                  </span>
                  <span>
                    Reverse Installation 
                    No
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-936"
              >
                <div
                  class="makeStyles-summaryRowDirection-943"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-937 makeStyles-summaryTextSeparation-939"
                  >
                    <span />
                    <span>
                      New
                    </span>
                    <span>
                      Last Maintenance Date: 
                      -
                    </span>
                    <span>
                      In Service Date: 
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-936"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-937 makeStyles-summaryTextSeparation-939"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-936"
              >
                <div
                  class="makeStyles-summaryText-937"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-935 makeStyles-entityTitle-940 MuiTypography-body1"
                  >
                    Reader 
                    1
                  </p>
                  <div
                    class="makeStyles-summaryMainText-938"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      Model 
                      -
                    </span>
                    <span>
                      Hostname 
                      -
                    </span>
                    <span>
                      Public IP 
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-936"
              >
                <svg>
                  info.svg
                </svg>
                <div
                  class="makeStyles-summaryText-937 makeStyles-summaryTextSeparation-939"
                >
                  <span>
                    SSH Port Connection: 
                    -
                  </span>
                  <span>
                    TELNET Port Connection: 
                    -
                  </span>
                  <span>
                    HTTP Port Connection: 
                    -
                  </span>
                  <span>
                    TCP Port Connection: 
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-936 makeStyles-drawerdevices-941"
              >
                <div
                  class="makeStyles-deviceWrapper-942"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-937 makeStyles-summaryTextSeparation-939"
                  >
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-936"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-937 makeStyles-summaryTextSeparation-939"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-822"
        />
        <div
          class="makeStyles-ctaWrapper-909"
          style="padding: 0px;"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-766 makeStyles-borderPrimaryButton-758"
              data-testid="acs-edition-modal-open-btn"
              style="max-width: 100%; width: 125px; padding: 6px 0px;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Edit Assignment
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-766 makeStyles-warningButton-767"
              data-testid="unassign-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Unassign
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccessControlSystemTab should render empty 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-490 makeStyles-filterActionsContainerPadding-492"
    >
      <div
        class="MuiBox-root MuiBox-root-646 makeStyles-filterStatusContainer-493 makeStyles-autocompleteFilterStatus-510 makeStyles-acsFilterWrapper-572"
      >
        <div
          class="makeStyles-floatingFilterWrapper-499 makeStyles-filterWrapper-498  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-500"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-508"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All ACS
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-502"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-520 makeStyles-primaryButtonExtraLarge-524 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-acs-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign ACS
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class=" makeStyles-container-647"
    >
      <div>
        <div
          class="MuiAvatar-root MuiAvatar-circle makeStyles-missingAvatarWrapper-658 makeStyles-missingAvatarBig-659 MuiAvatar-colorDefault"
        >
          <svg>
            inventory.svg
          </svg>
        </div>
      </div>
      <p
        class="MuiTypography-root makeStyles-missingListText-648 MuiTypography-body1"
      >
        There are no ACS assigned
      </p>
    </div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-689 makeStyles-close-700 closed"
      data-testid="drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-690 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-692"
        >
          <div
            class="makeStyles-drawerButton-693"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-691"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-694 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Device Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-summaryDeviceDetail-706"
        >
          <div
            class="makeStyles-company-707"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-717"
            >
              <div
                class="makeStyles-summaryText-710"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-708 makeStyles-entityTitle-713 MuiTypography-body1"
                >
                  -
                </p>
                <div
                  class="makeStyles-summaryMainText-711"
                >
                  <span>
                    Open Portal
                  </span>
                  <span>
                    Reverse Installation 
                    No
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-709"
              >
                <div
                  class="makeStyles-summaryRowDirection-716"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-710 makeStyles-summaryTextSeparation-712"
                  >
                    <span />
                    <span>
                      New
                    </span>
                    <span>
                      Last Maintenance Date: 
                      -
                    </span>
                    <span>
                      In Service Date: 
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-709"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-710 makeStyles-summaryTextSeparation-712"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-709"
              >
                <div
                  class="makeStyles-summaryText-710"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-708 makeStyles-entityTitle-713 MuiTypography-body1"
                  >
                    Reader 
                    1
                  </p>
                  <div
                    class="makeStyles-summaryMainText-711"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      Model 
                      -
                    </span>
                    <span>
                      Hostname 
                      -
                    </span>
                    <span>
                      Public IP 
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-709"
              >
                <svg>
                  info.svg
                </svg>
                <div
                  class="makeStyles-summaryText-710 makeStyles-summaryTextSeparation-712"
                >
                  <span>
                    SSH Port Connection: 
                    -
                  </span>
                  <span>
                    TELNET Port Connection: 
                    -
                  </span>
                  <span>
                    HTTP Port Connection: 
                    -
                  </span>
                  <span>
                    TCP Port Connection: 
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-709 makeStyles-drawerdevices-714"
              >
                <div
                  class="makeStyles-deviceWrapper-715"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-710 makeStyles-summaryTextSeparation-712"
                  >
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-709"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-710 makeStyles-summaryTextSeparation-712"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-583"
        />
        <div
          class="makeStyles-ctaWrapper-682"
          style="padding: 0px;"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-527 makeStyles-borderPrimaryButton-519"
              data-testid="acs-edition-modal-open-btn"
              style="max-width: 100%; width: 125px; padding: 6px 0px;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Edit Assignment
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-527 makeStyles-warningButton-528"
              data-testid="unassign-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Unassign
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`AccessControlSystemTab should render loading 1`] = `
<div>
  Loading...
</div>
`;

exports[`AccessControlSystemTab should render with empty location items 1`] = `
<div>
  <div>
    <div
      class="makeStyles-filterActionsContainer-1185 makeStyles-filterActionsContainerPadding-1187"
    >
      <div
        class="MuiBox-root MuiBox-root-1341 makeStyles-filterStatusContainer-1188 makeStyles-autocompleteFilterStatus-1205 makeStyles-acsFilterWrapper-1267"
      >
        <div
          class="makeStyles-floatingFilterWrapper-1194 makeStyles-filterWrapper-1193  floatingFilterWrapper"
        >
          <span
            class="makeStyles-floatingFilterButton-1195"
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              aria-controls="false"
              aria-haspopup="true"
              class="MuiButtonBase-root MuiButton-root MuiButton-text makeStyles-buttonFilter-1203"
              data-testid="button-filter-open"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                All ACS
                <span
                  class="MuiButton-endIcon MuiButton-iconSizeMedium"
                >
                  <svg
                    class="makeStyles-dropdownIcon-1197"
                  >
                    expand.svg
                  </svg>
                </span>
              </span>
            </button>
          </span>
        </div>
      </div>
      <button
        class="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-createButton-1215 makeStyles-primaryButtonExtraLarge-1219 MuiButton-containedPrimary MuiButton-containedSizeLarge MuiButton-sizeLarge MuiButton-fullWidth"
        data-testid="open-acs-modal-btn"
        tabindex="0"
        type="button"
      >
        <span
          class="MuiButton-label"
        >
          Assign ACS
        </span>
        <span
          class="MuiTouchRipple-root"
        />
      </button>
    </div>
    <div
      class="MuiGrid-root makeStyles-acsListItemWrapper-1338 makeStyles-acsListHeader-1335 MuiGrid-container"
    >
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Name
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Device Type
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Serial Number
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Reader 1
        </p>
      </div>
      <div
        class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
      >
        <p
          class="MuiTypography-root MuiTypography-body1"
        >
          Reader 2
        </p>
      </div>
    </div>
    <hr
      class="MuiDivider-root makeStyles-acsListHeaderDivide-1336"
    />
    <div
      class="MuiBox-root MuiBox-root-1342 makeStyles-acsListItemWrapper-1338"
      data-testid="no-location-item-wrapper"
    >
      <div
        class="MuiBox-root MuiBox-root-1343 makeStyles-acsListItem-1339"
      >
        <div
          class="MuiGrid-root MuiGrid-container MuiGrid-align-items-xs-center"
          data-testid="acs-item"
          style="cursor: pointer; height: 100%;"
        >
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
          >
            <p
              class="MuiTypography-root MuiTypography-body1"
            />
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
          >
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              Handheld
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
          >
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              NSDFJE3129 - 3354
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
          >
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              -
            </p>
          </div>
          <div
            class="MuiGrid-root MuiGrid-item MuiGrid-grid-xs-true"
          >
            <p
              class="MuiTypography-root MuiTypography-body1"
            >
              -
            </p>
          </div>
        </div>
      </div>
    </div>
    <div
      class="MuiDrawer-root MuiDrawer-docked makeStyles-drawer-1367 makeStyles-close-1378 closed"
      data-testid="drawer"
    >
      <div
        class="MuiPaper-root MuiDrawer-paper makeStyles-drawerPaper-1368 MuiDrawer-paperAnchorRight MuiDrawer-paperAnchorDockedRight MuiPaper-elevation0"
        style="visibility: hidden; webkit-transform: translateX(1024px) translateX(0px); transform: translateX(1024px) translateX(0px);"
      >
        <div
          class="makeStyles-drawerButtonWrapper-1370"
        >
          <div
            class="makeStyles-drawerButton-1371"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-text"
              data-testid="drawer-close-btn"
              style="outline: none;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                <svg>
                  close.svg
                </svg>
              </span>
              <span
                class="MuiTouchRipple-root"
              />
            </button>
          </div>
          <div
            class="makeStyles-drawerHeader-1369"
          >
            <p
              class="MuiTypography-root makeStyles-drawerTitle-1372 MuiTypography-body1 MuiTypography-colorPrimary MuiTypography-alignLeft"
            >
              Device Information
            </p>
          </div>
        </div>
        <div
          class="makeStyles-summaryDeviceDetail-1384"
        >
          <div
            class="makeStyles-company-1385"
          >
            <div
              class="makeStyles-drawerOverflowWrapper-1395"
            >
              <div
                class="makeStyles-summaryText-1388"
              >
                <p
                  class="MuiTypography-root makeStyles-deviceAccent-1386 makeStyles-entityTitle-1391 MuiTypography-body1"
                >
                  -
                </p>
                <div
                  class="makeStyles-summaryMainText-1389"
                >
                  <span>
                    Open Portal
                  </span>
                  <span>
                    Reverse Installation 
                    No
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1387"
              >
                <div
                  class="makeStyles-summaryRowDirection-1394"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-1388 makeStyles-summaryTextSeparation-1390"
                  >
                    <span />
                    <span>
                      New
                    </span>
                    <span>
                      Last Maintenance Date: 
                      -
                    </span>
                    <span>
                      In Service Date: 
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1387"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-1388 makeStyles-summaryTextSeparation-1390"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1387"
              >
                <div
                  class="makeStyles-summaryText-1388"
                >
                  <p
                    class="MuiTypography-root makeStyles-deviceAccent-1386 makeStyles-entityTitle-1391 MuiTypography-body1"
                  >
                    Reader 
                    1
                  </p>
                  <div
                    class="makeStyles-summaryMainText-1389"
                  >
                    <span>
                      -
                    </span>
                    <span>
                      Model 
                      -
                    </span>
                    <span>
                      Hostname 
                      -
                    </span>
                    <span>
                      Public IP 
                      -
                    </span>
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1387"
              >
                <svg>
                  info.svg
                </svg>
                <div
                  class="makeStyles-summaryText-1388 makeStyles-summaryTextSeparation-1390"
                >
                  <span>
                    SSH Port Connection: 
                    -
                  </span>
                  <span>
                    TELNET Port Connection: 
                    -
                  </span>
                  <span>
                    HTTP Port Connection: 
                    -
                  </span>
                  <span>
                    TCP Port Connection: 
                    -
                  </span>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1387 makeStyles-drawerdevices-1392"
              >
                <div
                  class="makeStyles-deviceWrapper-1393"
                >
                  <svg>
                    device-status.svg
                  </svg>
                  <div
                    class="makeStyles-summaryText-1388 makeStyles-summaryTextSeparation-1390"
                  >
                    <span>
                      -
                    </span>
                  </div>
                </div>
              </div>
              <div
                class="makeStyles-summarySection-1387"
              >
                <svg>
                  notes.svg
                </svg>
                <div
                  class="makeStyles-summaryText-1388 makeStyles-summaryTextSeparation-1390"
                >
                  <span>
                    -
                  </span>
                </div>
              </div>
            </div>
          </div>
        </div>
        <hr
          class="MuiDivider-root makeStyles-drawerDivider-1278"
        />
        <div
          class="makeStyles-ctaWrapper-1360"
          style="padding: 0px;"
        >
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-1222 makeStyles-borderPrimaryButton-1214"
              data-testid="acs-edition-modal-open-btn"
              style="max-width: 100%; width: 125px; padding: 6px 0px;"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Edit Assignment
              </span>
            </button>
          </span>
          <span
            class=""
            data-testid="controlled-button"
            tabindex="-1"
          >
            <button
              class="MuiButtonBase-root MuiButton-root MuiButton-outlined makeStyles-drawerCTA-1222 makeStyles-warningButton-1223"
              data-testid="unassign-btn"
              tabindex="0"
              type="button"
            >
              <span
                class="MuiButton-label"
              >
                Unassign
              </span>
            </button>
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;
